Add Modern PyQt6 Driver Station UI with UDP communication for FRC robots
- Implemented a complete Driver Station UI using PyQt6.
- Added UDP packet sender for communication from Driver Station to roboRIO.
- Integrated UDP listener for receiving telemetry data from the robot.
- Included functionality for alliance station selection and FMS attachment toggle.
- Developed telemetry parsing for CPU, RAM, Disk, and CAN information.
- Created a structured layout for the UI with sections for robot mode, status, telemetry, and network setup.
- Added emergency stop and reboot functionalities.
- Implemented logging for telemetry and actions taken in the UI.

--- a/logger/control/control
+++ b/logger/control/control
@@ -1,9 +1,9 @@
-Package: hello-world-autostart
-Version: 1.0.0
+Package: Can logger
+Version: 1.0.2
 Description: Autostart systemcore package
 Section: development
 Priority: optional
-Maintainer: Limelight Vision
+Maintainer: Ryan Radtke
 Architecture: all
 Source: local
 X-Port: 9001
