--- a/logger/overlay/etc/systemd/system/CanBus-logger.service
+++ b/logger/overlay/etc/systemd/system/CanBus-logger.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Hello World Web Service With Autostart
+Description=Can bus logger
 After=network.target
 Wants=network.target
 
@@ -7,7 +7,7 @@ Wants=network.target
 Type=simple
 User=root
 Group=root
-ExecStart=/usr/local/bin/hello-world-autostart/hello_world_autostart.py
+ExecStart=/usr/local/bin/logger/logger.py
 Restart=always
 RestartSec=5
 TimeoutStartSec=3
